[build-system]
requires = ["hatchling ~=1.0", "hatch-vcs ~=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "seedbank"
description = "Common infrastructure for seeding random number generators."
authors = [
  { name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]
dependencies = [
  "numpy >=1.17",
  "typing-extensions ~= 4.8",
]

[project.optional-dependencies]
numba = ["numba >=0.54"]
torch = ["torch"]
cupy = ["cupy"]
cuda11x = ["cupy-cuda11x"]
tf = ["tensorflow >=2,<3"]
jax = ["jax[cpu]>=0.4.16"]

[project.urls]
Homepage = "https://seedbank.lenksit.org"
GitHub = "https://github.com/lenskit/seedbank"

[dependency-groups]
dev = [
  "wheel",
  "build ~=1.0",
  "ruff >= 0.2",
  "pyright",
  "copier ==9.*",
  "unbeheader ~= 1.3",
  "ipython",
  "sphinx-autobuild",
]
test = [
  "pytest >= 7",
  "pytest-doctestplus",
  "pytest-cov >=2.12",
  "coverage >=5",
  "pyyaml",
  "toml",
]
doc = [
  "sphinx >=4.2",
  "sphinxext-opengraph >= 0.5",
  "furo",
]

# configure build tools
[tool.hatch.build.targets.wheel]
packages = ["seedbank"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "guess-next-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "seedbank/_version.py"

[tool.uv]
default-groups = ["dev", "test", "doc"]

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "testing",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
testing = ["pytest", "hypothesis"]

[tool.mypy]
exclude = "^docs/"

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "docs/*",
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = "warning"
